[tool.poetry]
name = "financedashboard"
version = "0.1.0"
description = "A simple Finance Dashboard"
authors = ["Roonsine"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pandas = "^1.5.2"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
